--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
     "prop-types": "^15.8.1",
+    "date-fns": "^2.30.0",
     "react": "^18.2.0",
+    "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
@@ -43,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "eslint": "^8.53.0",
     "eslint-plugin-react": "^7.33.2",
     "tailwindcss": "^3.3.5"
