--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
+    "clipboard": "^2.0.11",
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "prop-types": "^15.8.1",
